--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -14,15 +14,18 @@ body {
     background-color: #ffffff;
 }
 
-h1 {
-    text-align: center;
-}
+/* BEGIN City Search Section */
 #searchSection {
   padding: 10px;
+  margin-left: 10px;
   width: 300px;
   height: 600px;
   border: 5px solid black;
   border-radius: 20px;
+}
+
+h1 {
+    text-align: center;
 }
 
 textarea {
@@ -34,3 +37,21 @@ button {
     color: white;
     width: 100%;
 }
+/* END City Search Section */
+
+
+/* BEGIN City Weather Info */
+#weatherResults {
+    padding: 10px;
+    margin-top: -625px;
+    margin-left: 400px;
+    width: auto;
+    height: auto;
+    border: 5px solid black;
+    border-radius: 20px;
+}
+
+h2 {
+    text-align: center;
+}
+/* END City Weather Info */
